models and migrations complete

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,5 +1,12 @@
 <div class="container">
   <h1>User Skills and Levels</h1>
-
+  <table>
+  	<th>
+  		<td>Name</td><td>Skill</td><td>Years</td><td>Formal?</td>
+  	</th>
+  	<tr>
+  		<td></td>
+  	</tr>
+  </table>
   <%# TODO: display the skills and proficiency levels for each user ... %>
 </div>
