--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -17,6 +17,7 @@
 
     <ul>
       <% if current_user %>
+        <li><a id="add-skill" href="/skills/new">Add Skill</a></li>
         <li><a id="sign-out" href="/sessions/<%= current_user.id %>">Sign Out</a></li>
       <% else %>
         <li><a href="/sessions/new">Sign In</a></li>
